created splash, closet page and nav-bar(primer.css)

--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
         <link rel="stylesheet" type="text/css" href="css/modules.css">
         <link rel="stylesheet" type="text/css" href="css/state.css">
         <link rel="stylesheet" type="text/css" href="css/theme.css">
-        <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <img class="background" src="pictures/splash-background.jpg">
         <main class="container">
-            <div id="title">InstaSwag</div>
+            <br>
+            <div id="title" class="fourteen columns">InstaSwag</div>
+            <input id="login" class="two columns" type="button" value="Log in">
             <div class="space">&nbsp;</div>
-            <div class="canvas">
-                <div class="canvas__content">
-                    <h1 class="sign-in"></h1>
-                <div>
+            <div class="one columns">&nbsp;</div>
+            <div class="content-info seven columns">
+                <h1 class="welcome">Welcome to InstaSwag.</h1>
+                <p class="description">No longer have difficulty choosing what to wear, what matches with what, or simply choosing something new. Watch as your closet matches for you something new everyday and suits your style.</p>
+            </div>
+            <div class="canvas eight columns">
+                    <div class="inputs">
+                        <input id="email" type="text" placeholder="Email">
+                        <input id="username" type="text" placeholder="Username">
+                        <input id="password" type="text" placeholder="Password">
+                    </div>
+                <br>
+                <input type="button" class="signup" value="Sign up">
             </div>
         </main>
     </body>
