--- a/additem.html
+++ b/additem.html
@@ -18,21 +18,43 @@
             <div class="content">
                 <header class="sixteen columns">
                     <a href="#"><img id="fblike" src="pictures/fblike.png"></a>
+                    <p id="fbnumber">150k+</p>
                     <div class="one column">&nbsp;</div>
-                    <div id="title" class="three columns">InstaSwag<span>™</span></div>
+                    <a href="#"><div id="title" class="three columns">InstaSwag<span>™</span></div></a>
                     <ul id="nav-top" class="eleven columns">
-                            <li>account</li>
-                            <li>about</li>
-                            <li>contact</li>
+                            <a href="#"><li>account</li></a>
+                            <a href="#"><li>about</li></a>
+                            <a href="#"><li>contact</li></a>
                     </ul>
                     <div class="clear"></div>
                 </header>
                 <ul id="nav-bottom">
                     <a href="additem.html"><li id="nav-1" class="two columns">add item</li></a>
                     <a href="closet.html"><li id="nav-2" class="two columns">closet</li></a>
-                    <a href="#"><li id="nav-3" class="two columns">match up!</li></a>
+                    <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
                 </ul>
-
+                <div class="dropbox six columns">
+                    <div id="dropbox"></div>
+                </div>
+                <div class="selection-box six columns">
+                    <select name="type" class="selection-type">
+                        <option value="type">--type--</option>
+                        <option id="tops" value="color">tops</option>
+                        <option id="bottoms" value="other">bottoms</option>
+                    </select>
+                    <select name="type" class="selection-color">
+                        <option value="type">--color--</option>
+                        <option id="black" value="black">black</option>
+                        <option id="white" value="white">white</option>
+                        <option id="grey" value="grey">grey</option>
+                        <option id="blue" value="blue">blue</option>
+                        <option id="red" value="red">red</option>
+                        <option id="green" value="green">green</option>
+                        <option id="beige" value="beige">beige</option>
+                    </select>
+                    <div class="clear"></div>
+                    <input type="button" id="add-item" value="add item">
+                </div>
             </div>
         </main>
     </body>
