--- a/matchup.html
+++ b/matchup.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="css/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/skeleton.css">
         <link rel="stylesheet" type="text/css" href="css/primer.css">
-        <link rel="stylesheet" type="text/css" href="css/closet.css">
+        <link rel="stylesheet" type="text/css" href="css/matchup.css">
         <link rel="stylesheet" type="text/css" href="css/state.css">
         <link rel="stylesheet" type="text/css" href="css/theme.css">
         <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans|Bree+Serif' rel='stylesheet' type='text/css'>
@@ -31,15 +31,8 @@
                 <ul id="nav-bottom">
                         <a href="additem.html"><li id="nav-1" class="two columns">add item</li></a>
                         <a href="closet.html"><li id="nav-2" class="two columns">closet</li></a>
-                        <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
-                    </ul>
-                <div class="top-section sixteen columns">
-                </div>
-                <div class="bottom-section sixteen columns">
-                </div>
-                <a href="additem.html"><input id="additem" type="button" class="three columns" value="add item"></a>
-                <div class="ten columns">&nbsp;</div>
-                <a href="matchup.html"><input id="generate" type="button" class="three columns" value="generate"></a>
+                        <a href="#"><li id="nav-3" class="two columns">match up!</li></a>
+                </ul>
             </div>
         </main>
     </body>
