--- a/additem.html
+++ b/additem.html
@@ -33,14 +33,15 @@
                     <a href="closet.html"><li id="nav-2" class="two columns">closet</li></a>
                     <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
                 </ul>
-                <div class="dropbox six columns">
+                <div class="five columns">&nbsp;</div>
+                <div class="dropbox five columns">
                     <div id="dropbox"></div>
                 </div>
                 <div class="selection-box six columns">
                     <select name="type" class="selection-type">
                         <option value="type">--type--</option>
-                        <option id="tops" value="color">tops</option>
-                        <option id="bottoms" value="other">bottoms</option>
+                        <option id="tops" value="tops">tops</option>
+                        <option id="bottoms" value="bottoms">bottoms</option>
                     </select>
                     <select name="type" class="selection-color">
                         <option value="type">--color--</option>
