--- a/closet.html
+++ b/closet.html
@@ -22,9 +22,9 @@
                     <div class="one column">&nbsp;</div>
                     <a href="#"><div id="title" class="three columns">InstaSwag<span>™</span></div></a>
                     <ul id="nav-top" class="eleven columns">
-                            <a href="#"><li>account</li></a>
-                            <a href="#"><li>about</li></a>
-                            <a href="#"><li>contact</li></a>
+                        <a href="#"><li>account</li></a>
+                        <a href="#"><li>about</li></a>
+                        <a href="#"><li>contact</li></a>
                     </ul>
                     <div class="clear"></div>
                 </header>
@@ -34,8 +34,10 @@
                         <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
                     </ul>
                 <div class="top-section sixteen columns">
+                    <div id="top-images"></div>
                 </div>
                 <div class="bottom-section sixteen columns">
+                    <div id="bottom-images"></div>
                 </div>
                 <a href="additem.html"><input id="additem" type="button" class="three columns" value="add item"></a>
                 <div class="ten columns">&nbsp;</div>
