--- a/closet.html
+++ b/closet.html
@@ -42,5 +42,7 @@
                 <a href="matchup.html"><input id="generate" type="button" class="three columns" value="generate"></a>
             </div>
         </main>
+        <script src="jquery-1.11.1.min.js"></script>
+        <script src="final.js"></script>
     </body>
 </html>
