--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                         <input id="password" type="text" placeholder="Password">
                     </div>
                 <br>
-                <input type="button" class="signup" value="Sign up">
+                <input type="button" id="signUpButton" class="signup" value="Sign up">
             </div>
         </main>
+        <script src="jquery-1.11.1.min.js"></script>
+        <script src="final.js"></script>
     </body>
 </html>
