--- a/matchup.html
+++ b/matchup.html
@@ -35,5 +35,7 @@
                 </ul>
             </div>
         </main>
+        <script src="jquery-1.11.1.min.js"></script>
+        <script src="final.js"></script>
     </body>
 </html>
