JS update. fix syntax error. some remain

--- a/closet.html
+++ b/closet.html
@@ -44,7 +44,7 @@
                 <a href="matchup.html"><input id="generate" type="button" class="three columns" value="generate"></a>
             </div>
         </main>
-        <script src="jquery-1.11.1.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="final.js"></script>
     </body>
 </html>
