--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <input type="button" id="signUpButton" class="signup" value="Sign up">
             </div>
         </main>
-        <script src="jquery-1.11.1.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="final.js"></script>
     </body>
 </html>
