--- a/additem.html
+++ b/additem.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </main>
-        <script src="jquery-1.11.1.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="final.js"></script>
     </body>
 </html>
