--- a/matchup.html
+++ b/matchup.html
@@ -46,7 +46,7 @@
                 <div class="five columns">&nbsp;</div>
             </div>
         </main>
-        <script src="jquery-1.11.1.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="final.js"></script>
     </body>
 </html>
