--- a/additem.html
+++ b/additem.html
@@ -22,9 +22,9 @@
                     <div class="one column">&nbsp;</div>
                     <a href="#"><div id="title" class="three columns">InstaSwag<span>™</span></div></a>
                     <ul id="nav-top" class="eleven columns">
-                            <a href="#"><li>account</li></a>
-                            <a href="#"><li>about</li></a>
-                            <a href="#"><li>contact</li></a>
+                            <a href="acount.html"><li>account</li></a>
+                            <a href="about.html"><li>about</li></a>
+                            <a href="contact.html"><li>contact</li></a>
                     </ul>
                     <div class="clear"></div>
                 </header>
