added drag and drop

--- a/additem.html
+++ b/additem.html
@@ -36,6 +36,7 @@
                 <div class="five columns">&nbsp;</div>
                 <div class="dropbox five columns">
                     <div id="dropbox"></div>
+                    <div id="state"></div>
                 </div>
                 <div class="selection-box six columns">
                     <select name="type" id="type-selector" class="selection-type">
@@ -59,6 +60,7 @@
             </div>
         </main>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
         <script src="final.js"></script>
     </body>
 </html>
