--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <input id="email" type="text" placeholder="Email">
                         <input id="username" type="text" placeholder="Username">
                         <input id="password" type="text" placeholder="Password">
+                        <div id="pleasefill"></div>
                     </div>
                 <br>
                 <input type="button" id="signUpButton" class="signup" value="Sign up">
