--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <img class="background" src="pictures/splash-background.jpg">
+        <img class="background" src="pictures/splash.jpg">
         <main class="container">
             <br>
             <div id="title" class="fourteen columns">InstaSwag</div>
