add rule spreedsheet, change picking function

--- a/additem.html
+++ b/additem.html
@@ -46,6 +46,7 @@
                         <option id="white" value="white">white</option>
                         <option id="grey" value="grey">grey</option>
                         <option id="blue" value="blue">blue</option>
+                        <option id="yellow" value="yellow">yellow</option>
                         <option id="red" value="red">red</option>
                         <option id="green" value="green">green</option>
                         <option id="beige" value="beige">beige</option>
