--- a/matchup.html
+++ b/matchup.html
@@ -28,7 +28,7 @@
                 <ul id="nav-bottom" class="seven columns">
                     <a href="additem.html"><li id="nav-1" class="two columns">add item</li></a>
                     <a href="closet.html"><li id="nav-2" class="two columns">closet</li></a>
-                    <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
+                    <a href="#"><li id="nav-3" class="two columns">match up!</li></a>
                 </ul>
                 <div class="clear"></div>
                 <div class="five columns">&nbsp;</div>
