--- a/contact.html
+++ b/contact.html
@@ -30,13 +30,17 @@
                 <a href="closet.html"><li id="nav-2" class="two columns">closet</li></a>
                 <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
             </ul>
-            <div class="contact-info eight columns">
-                <h2>Where are we?</h2>
-                <h3>212 SwagMe Ave, Seattle, WA 98212</h3>
-                <h2>Call us</h2>
-                <h3>206-212-212</h3>
-                <h2>Email us</h2>
-                <h3>info@closetbros.com</h3>
+            <div class="clear"></div>
+            <div class="contact-info nine columns">
+                <h2><span>Where are we?</span></h2>
+                <h3><span>212 SwagMe Ave, Seattle, WA 98212</span></h3>
+                <h2><span>Call us</span></h2>
+                <h3><span>206-212-212</span></h3>
+                <h2><span>Email us</span></h2>
+                <h3><span>info@closetbros.com</span></h3>
+            </div>
+            <div class="google seven columns">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246630.2009791288!2d-148.16784379999999!3d-15.015065999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x768d9035e86d3b9b%3A0xa2d186ec305c8542!2sTikehau%2C+French+Polynesia!5e0!3m2!1sen!2sus!4v1409182351229" width="400" height="300" frameborder="0" style="border:0"></iframe>
             </div>
         </main>
     </body>
