fixed bugs, added new pictures

--- a/closet.html
+++ b/closet.html
@@ -42,6 +42,7 @@
         </main>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+        <script src="loadcloset.js"></script>
         <script src="final.js"></script>
     </body>
 </html>
