--- a/additem.html
+++ b/additem.html
@@ -57,6 +57,7 @@
         </main>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+        <script src="dragdrop.js"></script>
         <script src="final.js"></script>
     </body>
 </html>
