add photos and some semantics

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                 </div>
                 <p id="fbnumber">150k+</p>
                 <ul id="nav-top">
-                        <a href="#"><li>account</li></a>
+                        <a href="index.html"><li id="confirm">sign out</li></a>
                         <a href="about.html"><li>about</li></a>
                         <a href="contact.html"><li>contact</li></a>
                 </ul>
@@ -31,5 +31,8 @@
                 <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
             </ul>
         </main>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+        <script src="final.js"></script>
     </body>
 </html>
