--- a/closet.html
+++ b/closet.html
@@ -19,17 +19,17 @@
                             <a href="#"><img id="fblike" src="pictures/fblike.png"></a>
                         </div>
                         <p id="fbnumber">150k+</p>
-                        <ul id="nav-top">
-                                <a href="#"><li>account</li></a>
+                        <nav id="nav-top">
+                                <a href="index.html"><li id="confirm">sign out</li></a>
                                 <a href="about.html"><li>about</li></a>
                                 <a href="contact.html"><li>contact</li></a>
-                        </ul>
+                        </nav>
                     </header>
-                    <ul id="nav-bottom" class="seven columns">
+                    <nav id="nav-bottom" class="seven columns">
                         <a href="additem.html"><li id="nav-1" class="two columns">add item</li></a>
                         <a href="closet.html"><li id="nav-2" class="two columns">closet</li></a>
                         <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
-                    </ul>
+                    </nav>
                 <div class="top-section sixteen columns">
                     <div id="top-images"></div>
                 </div>
@@ -40,8 +40,14 @@
                 <a href="additem.html"><input id="additem" type="button" class="three columns" value="add item"></a>
                 <a href="matchup.html"><input id="generate" type="button" class="three columns" value="match"></a>
         </main>
+        <br>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
         <script src="final.js"></script>
+        <script>
+            $("#confirm").click(function(){
+                alert("Where do you think you're going? Come back again soon!");
+            });
+        </script>
     </body>
 </html>
