add user profile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <input id="login-button" class="two columns" type="button" value="Log in">
             <div class="login-inputs offset-by-twelve four columns">
                 <input id="login-username" type="text" placeholder="Username">
-                <input id="login-password" type="text" placeholder="Password">
+                <input id="login-password" type="password" placeholder="Password">
+                <div id="log-in-feedback"></div>
             </div>
             <div class="space">&nbsp;</div>
             <div class="content-info offset-by-one seven columns">
@@ -27,7 +28,7 @@
                     <div class="inputs">
                         <input id="email" type="text" placeholder="Email">
                         <input id="username" type="text" placeholder="Username">
-                        <input id="password" type="text" placeholder="Password">
+                        <input id="password" type="password" placeholder="Password">
                         <div id="pleasefill"></div>
                     </div>
                 <br>
