update media queries & styling

--- a/matchup.html
+++ b/matchup.html
@@ -19,11 +19,11 @@
                         <a href="#"><img id="fblike" src="pictures/fblike.png"></a>
                     </div>
                     <p id="fbnumber">150k+</p>
-                    <nav id="nav-top">
+                    <ul id="nav-top">
                             <a href="index.html"><li id="confirm">sign out</li></a>
                             <a href="about.html"><li>about</li></a>
                             <a href="contact.html"><li>contact</li></a>
-                    </nav>
+                    </ul>
                 </header>
                 <nav id="nav-bottom" class="seven columns">
                     <a href="additem.html"><li id="nav-1" class="two columns">add item</li></a>
