--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
             <input id="login-button" class="two columns" type="button" value="Log in">
             <form class="login-inputs offset-by-twelve four columns">
                 <input id="login-username" type="text" placeholder="Username">
-<<<<<<< HEAD
                 <input id="login-password" type="password" placeholder="Password">
                 <div id="log-in-feedback"></div>
-            </div>
-=======
-                <input id="login-password" type="text" placeholder="Password">
+                <input type="button" id="signInButton" value="Let's go!">
             </form>
->>>>>>> 55a211ff8463e783d17c419934098fd2331f955b
             <div class="space">&nbsp;</div>
             <summary class="content-info offset-by-one seven columns">
                 <h1 class="welcome">Welcome to InstaSwag.</h1>
@@ -47,7 +43,7 @@
         <script>
             $(document).ready(function(){
                 $('#login-button').click(function(){
-                    $('#login-username, #login-password').fadeIn("slow");
+                    $('#login-username, #login-password, #signInButton').fadeIn("slow");
                 });
             });
 
