--- a/matchup.html
+++ b/matchup.html
@@ -42,6 +42,7 @@
                 </div>
                 <div class="five columns">&nbsp;</div>
                 <input type="button" id="generate" value="re-match!">
+                <input type="button" id="chaos" value="CHAOS MODE!">
         </main>
         <br>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
