updating about page

--- a/about.html
+++ b/about.html
@@ -31,9 +31,20 @@
                 <a href="matchup.html"><li id="nav-3" class="two columns">match up!</li></a>
             </ul>
             <div class="clear"></div>
-            <div class="about-box seven columns">
-                <h2><span>About Us</span></h2>
-                <p>From the creative minds behind Universal Undies comes InstaSwag, the wardrobe generator for busy men. Millions of men around the globe who are grinding for that paper depend on InstaSwag to look fresh while spending the bare minimum of time in their closets.</p>
+            <div>
+              <div class="seven columns">
+                <div class="about-box">
+                  <h2><span>About</span></h2>
+                  <p>From the creative minds behind Universal Undies comes InstaSwag, the wardrobe generator for busy men. Millions of men around the globe who are hustling day-in day-out rely on InstaSwag to help them look fresh while spending less time in the closet and more time grinding for paper.</p>
+                </div>
+                <div class="about-box">
+                  <h2><span>Meet the Closet Bros.?</span></h2>
+                  <p>From the creative minds behind Universal Undies comes InstaSwag, the wardrobe generator for busy men. Millions of men around the globe who are hustling day-in day-out rely on InstaSwag to help them look fresh while spending less time in the closet and more time grinding for paper.</p>
+                </div>
+              </div>
+              <div class ="nine columns">
+                  <img src="pictures/headsonbodies.jpg">
+              </div>
             </div>
         </main>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
