login styling fixed

--- a/closet.html
+++ b/closet.html
@@ -20,9 +20,9 @@
                         </div>
                         <p id="fbnumber">150k+</p>
                         <ul id="nav-top">
-                                <a href="index.html"><li id="confirm">sign out</li></a>
                                 <a href="about.html"><li>about</li></a>
                                 <a href="contact.html"><li>contact</li></a>
+                                <a href="index.html"><li id="confirm">sign out</li></a>
                         </ul>
                     </header>
                     <nav id="nav-bottom" class="seven columns">
@@ -38,7 +38,7 @@
                 </div>
                 <div class="sixteen columns">&nbsp;</div>
                 <a href="additem.html"><input id="additem" type="button" class="three columns" value="add item"></a>
-                <a href="matchup.html"><input id="generate" type="button" class="three columns" value="match"></a>
+                <a href="matchup.html"><input id="matchup" type="button" class="three columns" value="match"></a>
         </main>
         <br>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
