updating about page

--- a/about.html
+++ b/about.html
@@ -35,16 +35,26 @@
               <div class="seven columns">
                 <div class="about-box">
                   <h2><span>About</span></h2>
-                  <p>From the creative minds behind Universal Undies comes InstaSwag, the wardrobe generator for busy men. Millions of men around the globe who are hustling day-in day-out rely on InstaSwag to help them look fresh while spending less time in the closet and more time grinding for paper.</p>
+                  <p>From the creative minds behind Universal Undies comes InstaSwag, the wardrobe generator for winners. Millions of men around the globe who are hustling day-in day-out rely on InstaSwag to help them look fresh while spending less time in the closet and more time grinding for paper.</p>
                 </div>
                 <div class="about-box">
-                  <h2><span>Meet the Closet Bros.?</span></h2>
-                  <p>From the creative minds behind Universal Undies comes InstaSwag, the wardrobe generator for busy men. Millions of men around the globe who are hustling day-in day-out rely on InstaSwag to help them look fresh while spending less time in the closet and more time grinding for paper.</p>
+                  <h2><span>Meet the Bros</span></h2>
+                  <p>The Closet Bros were brought together through an act of God in the hot and heavy Seattle summer of 2014. After working on the Universal Undies storefront, the three Bros. discovered a shared affinity for the code, pumping out generous lines between gymming, tanning, and laundering.</p>
                 </div>
               </div>
               <div class ="nine columns">
                   <img src="pictures/headsonbodies.jpg">
               </div>
+            </div>
+            <div class="clear"></div>
+            <div class="seven columns">
+                <div class="about-box">
+                    <h2><span>Also by Closet Bros:</span></h2>
+                    <ul>
+                        <li><a href="UniversalUndies/index.html"><img class="logo" src="UniversalUndies/pictures/UUlogo.jpg"></a></li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
         </main>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
